# financial-asset-relationship-db

./: ...  .codacy.yaml  .coderabbit-config-guide.md  .coderabbit.yaml  .deepsource.toml  .editorconfig  .env.development  .env.example  .eslintrc.json  .flake8  .gitignore  .jscpd.json  .markdownlint.json  .mergify.yml  .pre-commit-ci.yaml  .pre-commit-config.yaml  .safety-policy.json  .sqlfluff  ADDITIONAL_COMPREHENSIVE_TEST_REPORT.md  ADDITIONAL_REVIEW_FIXES.md  ADDITIONAL_TESTS_SUMMARY.md  AGENTS.md  ARCHITECTURE.md  AUDIT_DEPENDENCY_SCANNER_SCOPE.md  AUDIT_REPORT.md  AUTO_ASSIGN_TEST_DOCUMENTATION.md  AXIOS_TESTS_QUICK_REFERENCE.md  AXIOS_UPGRADE_TEST_REPORT.md  BEARER_WORKFLOW_TEST_SUMMARY.md  BRANCH_CLEANUP_ANALYSIS.md  BRANCH_CLEANUP_QUICK_REFERENCE.md  BRANCH_CLEANUP_SUMMARY.md  BRANCH_TEST_GENERATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_BRANCH_CLEANUP.md  CLAUDE.md  CODEBASE_OVERVIEW.md  CODE_OF_CONDUCT.md  COMPLETE_TEST_GENERATION_SUMMARY.md  COMPREHENSIVE_ADDITIONAL_TESTS_SUMMARY.md  (+193 more)
.antigravitycli/: b8738b1d-6673-4cb5-a888-1428166137ff.json
.circleci/: config.yml
.claude/: ecc-tools.json  identity.json  settings.local.json
.claude/commands/: ci-workflow-configuration-update.md  ci-workflow-update-and-fix.md  code-formatting-auto-fix.md  code-formatting-standardization.md  code-formatting-style-fix.md  code-formatting-with-multi-tool.md  database-migration.md  eslint-config-update-and-refactor.md  eslint-config-update.md  eslint-configuration-update.md  feature-development.md  python-test-file-edit-workflow.md  script-feature-update-and-test-sync.md  test-file-extension-and-refinement.md  unit-test-file-iteration.md  update-deployment-configuration.md  update-release-candidate-evidence-template-and-related-docs.md
.codacy/: cli.sh  codacy.yaml
.codex/: AGENTS.md  config.toml
.cursor/: settings.json
.cursor/rules/: architecture-expert-query.mdc  architecture-expert.mdc  codacy.mdc  snipara.mdc  sonarqube_mcp_instructions.mdc
.devcontainer/: devcontainer.json
.elastic-copilot/: README.md
.elastic-copilot/memory/: activeContext.md  dependencyMatrix.md  implementationPlan.md  learningJournal.md  progress.md  systemManifest.md
.gemini/: .session-context  settings.json
.gemini/hooks/: after-tool.sh  before-tool.sh  pre-compress.sh  session-start.sh
.github/: AI_AGENT_GUARDRAILS.md  AUTOMATION_SCOPE_POLICY.md  CIRCLECI_SETUP.md  actionlint.yaml  copilot-instructions.md  deepsource-autofix-rules.yml  dependabot.yml  labeler.yml  pr-agent-config.yml  pull_request_template.md
.github/.deployment-ci/: ci-gate-spec.yaml
.github/ISSUE_TEMPLATE/: branch_cleanup.md  database_authorization_closure.md  operational_drill_evidence.md  release_candidate_evidence.md  restore_rehearsal_evidence.md
.github/PULL_REQUEST_TEMPLATE/: architecture-docs.md  coordination-safe-migration.md  dependency-change.md  refactor.md  validator-follow-up.md
.github/codeql/: codeql-config.yml
.github/linters/: .checkov.yaml  .markdownlint.json
.github/pr-copilot/: IMPLEMENTATION_STATUS.md  README.md  TESTING.md  pr-copilot.ts
.github/scripts/: README.md  context_chunker.py  context_chunker_improved.py  schema_report_cli.py
.github/workflows/: apisec-scan.yml  architecture-compound.yml  auto-assign.yml  autofix.yml  bandit.yml  bearer.yml  branch-cleanup.yml  checkmarx-one.yml  checkmarx.yml  ci-gate-spec.yaml  ci.yml  codacy.yml  codecov.yaml  codeflash.yaml  codeql.yml  codescan.yml  codspeed.yml  contrast-scan.yml  debricked.yml  dependency-check.yml  dependency-review.yml  devskim.yml  docker-image.yml  docker-publish.yml  docker.yml  dotnet-desktop.yml  eslint.yml  frogbot-scan-and-fix.yml  frogbot-scan-pr.yml  frontend-ci.yml  go.yml  google-cloudrun-docker.yml  google-cloudrun-source.yml  greetings.yml  hadolint.yml  hosted-readiness.yml  jfrog-github-oidc-example.yml  label.yml  manual.yml  mcp-check.yml  (+41 more)
.kilocode/: mcp.json
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
.snipara/: project
.sonarlint/: connectedMode.json
.trae/: settings.json
.windsurf/: settings.json
api/: __init__.py  api_models.py  app_factory.py  auth.py  cors_policy.py  cors_utils.py  database.py  graph_lifecycle.py  graph_lifecycle_providers.py  main.py  main_backup.py  metrics.py  models.py  rate_limit.py  router_helpers.py  slo_evaluator.py
branch_reviews/: gitauto-issue-133-review.md
codacy-analysis-cli-master/: CONTRIBUTING.md  Dockerfile  README.md
docs/: DEEPSOURCE_YAML_RULES.md  DEPENDENCY_POLICY.md  DEPLOYMENT_DECISION_SUMMARY.md  ENV_ACCESS_AUDIT.md  GOVERNANCE.md  HOSTED_DEPLOYMENT_STRATEGY.md  OBSERVABILITY_MASTER_SPEC.md  OBSERVABILITY_README.md  OPERATOR_AUTHORIZATION_QUICKREF.md  PR_DESCRIPTION_UPDATE.md  PR_SCOPE_GUARDRAILS.md  REPOSITORY_CONTROL_PLANE.md  RUNTIME_MODES.md  ai_system_spec.md  ci-required-checks-policy.md  coding-guidelines.md  dependency-alignment-notes.md  enterprise-deployment-operating-model.md  enterprise-readiness-index.md  graph-persistence-design.md  graph-persistence-lifecycle-seam.md  mergify.md  operational-readiness-risks.md  phase-3-computation-layout-boundary-audit.md  reconciliation-discovery-map.md  reconciliation-engine.md  release-checklist.md  release-evidence-pack.md  staging-deployment-operating-baseline.md  tech_spec.md  validation-gap-audit.md
frontend/: .eslintignore  .eslintrc.json  .gitignore  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.typecheck.json
migrations/: 001_initial.sql  002_add_heartbeat_columns.sql  003_add_execution_identity_and_checkpoint_columns.sql  004_add_cancellation_columns.sql  005_adr0007_public_deny_untrusted_roles.sql  006_adr0007_revoke_public_execute_helper.sql
monitoring/: README.md
scripts/: __init__.py  api_entrypoint.sh  check_database_authorization.py  check_hosted_readiness.py  deduplicate_manifest.py  validate_manifest.py  verify_staging_promotion.py
src/: __init__.py  workflow_validator.py
tests/: README.md  __init__.py  conftest.py  test_auth.db
tmp/: pr356_test_documentation_validation.py
(+5259 files in other folders)
