[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-asset-relationship-db"
version = "1.0.0"
description = "Financial Asset Relationship Network visualization application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["finance", "assets", "relationships", "visualization", "gradio"]
authors = [
    {name = "Financial Asset Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "gradio==5.9.1",
    "Markdown>=3.4,<4.0",
    "curl-cffi>=0.5.0",
    "requests>=2.32.2",
    "websockets>=13.0",
    "plotly>=5.0.0",
    "pandas>=1.5.0",
    "numpy>=1.26.0",
    "dataclasses-json>=0.5.7",
    "yfinance>=0.2.51",
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.12.0",
    "PyYAML>=6.0.3",
    "ruamel.yaml>=0.18.17",
    "mangum>=0.17.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "flake8>=6.0.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.4.0,<1.0.0",
    "typer>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
fix = false
unsafe-fixes = false

[tool.ruff.lint]
extend-select = ["I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
strict_equality = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "plotly.*",
    "yfinance.*",
    "dataclasses_json.*",
]
ignore_missing_imports = true

[tool.pylint.main]
fail-under = 8.0
jobs = 0
limit-inference-results = 100
persistent = true
py-version = "3.12"
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (for short variable names)
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function or method docstring
    "R0903",  # Too few public methods (for dataclasses)
    "R0913",  # Too many arguments
    "W0212",  # Access to protected member (for _positions, _find_relationships)
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 50

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "."
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
disable-telemetry = true
formatter-cmds = ["disabled"]
